# image-search

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  index.py  model.py  search.py  server.py
demo/: demo.md
scripts/: evaluate.py  fetch_samples.py
web/: index.html
