[project]
name = "image-semantic-search"
version = "0.1.0"
description = "Natural-language semantic search over a folder of images, powered by CLIP."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "torchvision",
    "open-clip-torch",
    "fastapi",
    "uvicorn[standard]",
    "numpy",
    "pillow",
    "python-multipart",
    "requests",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
